Updated styles for master layout file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,25 @@
   </head>
 
   <body>
-  	<p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+<!--   	<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p> -->
 
-    <%= render "shared/nav", location: 'top' %>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
 
-    <%= login_helper %>
-    
-    <%= yield %>
+          <%= render "shared/application_nav" %>
 
-    <%= copyright_generator %>
-    
-    <%= source_helper("application") %>
+          <%= login_helper %>
+          
+          <%= yield %>
+
+          <%= copyright_generator %>
+          
+          <%= source_helper("application") %>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
