--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Me</h1>
+<p>I started coding HTML by hand while in college. I went on to do tech support for Macromedia software, mainly Flash and Dreamweaver, which are now part of Adobe's software suite. While employed with Macromedia I took some courses in Java and C++ as well as attempted to teach myself PHP and MySQL through books.</p>
+<p>Later I went on to take classes in HTML5, CSS3, PHP, MySQL, WordPress, JavaScript, and jQuery through Brookhaven College. I've also done Team Treehouse, where I started with Ruby on Rails. In this industry you never stop learning. I know I don't. I continue to learn through videos and books.</p>
