Updated styles for user edit page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,3 +160,25 @@ body {
     width: 55rem;
   }
 }
+
+/*
+ * Custom Styles
+ */
+
+.card {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.card-block {
+  color: black;
+  text-align: left;
+}
+
+.auth-links {
+  text-align: center;
+}
+
+.auth-links a {
+  color: black;
+}
