--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
   <h1 class="cover-heading">Bonvenon!</h1>
-  <p class="lead">Web development is one of my passions. A website nowadays must be both dynamic ("interactable") and responsive (able to look good on different devices).</p>
+  <p class="lead">Web development is one of my passions. A website nowadays must be both dynamic and responsive, meaning the end user must be able to register for and log into an account (dynamic) on any device (responsive).</p>
   <p class="lead">
     <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
