--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,54 @@
-<h1>Portfolio Items</h1>
+<div class="album text-muted">
+  <div class="container">
+    <div class="row">
+    	<!--
+			<%= link_to "Create New Item", new_portfolio_path if logged_in?(:site_admin) %>
+			-->
+			<%= render partial: 'portfolio_item', collection: @portfolio_items %>
 
-<%= link_to "Create New Item", new_portfolio_path if logged_in?(:site_admin) %>
+    </div>
 
-<%= render partial: 'portfolio_item', collection: @portfolio_items %>
+  </div>
+</div>
+
+
+
+
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
