--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -188,3 +188,10 @@ body {
   margin: 0 auto;
   float: none;
 }
+
+.app-nav span {
+  /*margin-left: 15px;
+  margin-right: 15px;*/
+  margin-left: 11px;
+  margin-right: 11px;
+}
