Updated images for about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,13 @@
 <h1>About Me</h1>
-<p>I started coding HTML by hand while in college. I went on to do tech support for Macromedia software, mainly Flash and Dreamweaver, which are now part of Adobe's software suite. While employed with Macromedia I took some courses in Java and C++ as well as attempted to teach myself PHP and MySQL through books.</p>
-<p>Later I went on to take classes in HTML5, CSS3, PHP, MySQL, WordPress, JavaScript, and jQuery through Brookhaven College. I've also done Team Treehouse, where I started with Ruby on Rails. In this industry you never stop learning. I know I don't. I continue to learn through videos and books.</p>
+<hr>
+<div class="row">
+	<div class="col-md-4">
+		<!--<img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/12987192_10208062976963840_1942934939903782321_n.jpg?_nc_cat=109&_nc_oc=AQlDmAG7_nyy5Xnsumys5R-4h7S3KBwwamF0ooyZhVs9RwzF-zB2mi_Sh6q0F4tp_iU&_nc_ht=scontent-dfw5-1.xx&oh=bde022edd19e240f2f6fbb2ca84407db&oe=5E455BE3" width="100%" alt="Profile Image">-->
+		<%= image_tag 'profile.jpg', class: 'profile-image', alt: 'Profile Image' %>
+	</div>
+	<div class="col-md-8">
+		<p>I started coding HTML by hand while in college. I went on to do tech support for Macromedia software, mainly Flash and Dreamweaver, which are now part of Adobe's software suite. While employed with Macromedia I took some courses in Java and C++ as well as attempted to teach myself PHP and MySQL through books.</p>
+		<p>Later I went on to take classes in HTML5, CSS3, PHP, MySQL, WordPress, JavaScript, and jQuery through Brookhaven College. I've also done Team Treehouse, where I started with Ruby on Rails. In this industry you never stop learning. I know I don't. I continue to learn through videos and books.</p>
+	</div>
+</div>
+
