--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "jquery-ui";
 
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
@@ -63,6 +64,10 @@ footer p {
  * Custom styles
  */
 
-.portfolio-form {
+/*.portfolio-form {
   padding: 20px;
+}*/
+
+.portfolio-container {
+  padding-top: 30px;
 }
