--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,30 @@
-<%= form_with(model: blog, local: true) do |form| %>
+<%= form_for(blog) do |f| %>
+  <% if blog.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
+
+      <ul>
+        <% blog.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.text_area :body, class: 'form-control', rows: 15, placeholder: 'Content' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit "Submit", class:'btn btn-primary' %>
+  </div>
+<% end %>
+
+<!-- <%= form_with(model: blog, local: true) do |form| %>
   <% if blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
@@ -24,4 +50,4 @@
   <div class="form-group">
     <%= form.submit class: 'btn btn-primary' %>
   </div>
-<% end %>
+<% end %> -->
