--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,6 @@
 <div class="album text-muted">
   <div class="container">
-    <div class="row">
+    <div class="row<%= " sortable" if logged_in?(:site_admin) %>">
     	<!--
 			<%= link_to "Create New Item", new_portfolio_path if logged_in?(:site_admin) %>
 			-->
