--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,14 +1,8 @@
 <%= form_for(blog) do |f| %>
   <% if blog.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
-
-      <ul>
-        <% blog.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+    <% blog.errors.full_messages.each do |error| %>
+      <%= js add_gritter(error, title: "Blake Hutchinson Portfolio", sticky: false) %>
+    <% end %>
   <% end %>
 
   <div class="form-group">
@@ -23,31 +17,3 @@
     <%= f.submit "Submit", class:'btn btn-primary' %>
   </div>
 <% end %>
-
-<!-- <%= form_with(model: blog, local: true) do |form| %>
-  <% if blog.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
-
-      <ul>
-      <% blog.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :blog_title, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :blog_body, class: 'form-control', rows: 15 %>
-  </div>
-
-  <div class="form-group">
-    <%= form.submit class: 'btn btn-primary' %>
-  </div>
-<% end %> -->
