--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -159,6 +159,7 @@ h6, .h6 {
  */
 
 .blog-footer {
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -177,6 +178,19 @@ h6, .h6 {
   font-size: 2.5em;
 }
 
+.comment-card > .card {
+  margin-top: 15px;
+}
+
 .comment-card .row > div {
   padding: 15px !important;
+}
+
+.comment-attribution {
+  font-size: .8em;
+  font-style: italic;
+}
+
+.comment-name {
+  font-weight: 700;
 }
