Updated source tracking feature

--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,8 @@
     <p>This is my blog with social media links below.</p>
   </div>
 
+    <%= source_helper("alert alert-info blog-sidebar-source") %>
+
   <div class="sidebar-module">
     <h4>Topics</h4>
     <% @side_bar_topics.each do |topic| %>
