--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,13 +1,9 @@
-<div class="card" data-id="<%= portfolio_item.id %>">
-  <%= image_tag portfolio_img(portfolio_item.thumb_image, 'thumb') %>
-  <p class="card-text">
-  	<span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
-  	<%= portfolio_item.subtitle %>
-  </p>
+<div class="col-md-4">
+	<div class="card" data-id="<%= portfolio_item.id %>">
+	  <%= image_tag portfolio_img(portfolio_item.thumb_image, 'thumb'), width: '100%' %>
+	  <p class="card-text">
+	  	<span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
+	  	<%= portfolio_item.subtitle %>
+	  </p>
+	</div>
 </div>
-
-
-<!--
-<%= link_to "Edit", edit_portfolio_path(portfolio_item) if logged_in?(:site_admin) %>
-<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
--->
