--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,27 +1,24 @@
-<h2 style="margin-bottom: 1.5rem;">Ways to contact me</h2>
+<div class="app-card-container">
+	<div class="card">
+		<h2 style="margin-bottom: 1.5rem;">Ways to contact me</h2>
 
-<hr>
+		<hr>
 
-<div class="row">
-	<div class="col-md-6">
-		<h4>Mailing Address</h4>
-		<p>P. O. Box 1313, Tatum, TX, 75691</p>
+		<div class="row">
+			<div class="col-md-6">
+				<h4>Mailing Address</h4>
+				<p>P. O. Box 1313, Tatum, TX, 75691</p>
 
-		<h4>Phone</h4>
-		<p><%= number_to_phone "9039312128" %></p>
+				<h4>Phone</h4>
+				<p><%= number_to_phone "9039312128" %></p>
 
-		<h4>Email</h4>
-		<p><a href="mailto:blake.hutchinson.1996@gmail.com?subject=Portfolio%20Contact">Email me</a></p>
-	</div>
+				<h4>Email</h4>
+				<p><a href="mailto:blake.hutchinson.1996@gmail.com?subject=Portfolio%20Contact">Email me</a></p>
+			</div>
 
-	<div class="col-md-6">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3371.8466553073695!2d-94.52074448624037!3d32.31597321465979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8636530315597aa5%3A0x9948e107bd17b54a!2sUnited%20States%20Postal%20Service!5e0!3m2!1sen!2sus!4v1572841052894!5m2!1sen!2sus" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+			<div class="col-md-6">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3371.8466553073695!2d-94.52074448624037!3d32.31597321465979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8636530315597aa5%3A0x9948e107bd17b54a!2sUnited%20States%20Postal%20Service!5e0!3m2!1sen!2sus!4v1572841052894!5m2!1sen!2sus" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+			</div>
+		</div>
 	</div>
 </div>
-
-
-
-
-<!--
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3371.8466553073695!2d-94.52074448624037!3d32.31597321465979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8636530315597aa5%3A0x9948e107bd17b54a!2sUnited%20States%20Postal%20Service!5e0!3m2!1sen!2sus!4v1572841052894!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
--->
