--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import "gritter";
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Lato&display=swap');
 
 /*
  * Globals
@@ -34,8 +35,18 @@ body {
 }
 body {
   color: #fff;
+  font-family: 'Lato', sans-serif;
   text-align: center;
   text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: 'Roboto Slab', serif;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -255,3 +266,4 @@ body {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
