--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,11 +12,12 @@
 							<h4><%= skill.title %></h4>
 							<div class="progress">
 								<div 
-								class="progress-bar progress-bar-striped bg-warning" 
+								class="progress-bar bg-success" 
 								role="progressbar" 
 								aria-valuenow="<%= skill.percent_utilized %>"
 								aria-valuemax="100"
 								style="width: <%= skill.percent_utilized %>%">
+								<%= skill.percent_utilized %>%
 								</div>
 							</div>
 						</div>
