Updated Topics sidebar widget to order alphabetically

--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -6,10 +6,10 @@
 
     <%= source_helper("alert alert-info blog-sidebar-source") %>
 
-  <div class="sidebar-module">
+  <div class="sidebar-module topics-sidebar">
     <h4>Topics</h4>
     <% @side_bar_topics.each do |topic| %>
-      <p><%= link_to topic.title, topic_path(topic) %></p>
+      <%= link_to topic.title, topic_path(topic), class: 'btn btn-outline-info' %>
     <% end %>
   </div>
 
